# drugdose

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  README.md  pyproject.toml
drugdose/: __init__.py  calculator.py  checker.py  cli.py  db.py  drip.py  exceptions.py
drugdose/data/: drugs.json  interactions.json
drugdose/models/: __init__.py  drug.py  patient.py  result.py
tests/: test_calculator.py
